<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhotoActivity"
    android:id="@+id/photo_layout">

    <ImageView
        android:id="@+id/imageViewPhoto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/input_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonGlasses"
            android:backgroundTint="@color/light_grey"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/glasses"
            android:textSize="11sp"/>

        <Button
            android:id="@+id/buttonMask"
            android:backgroundTint="@color/light_grey"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginStart="3dp"
            android:text="@string/mask"
            android:textSize="11sp"/>

        <Button
            android:id="@+id/buttonTShirt"
            android:backgroundTint="@color/light_grey"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginStart="3dp"
            android:text="@string/t_shirt"
            android:textSize="11sp"/>

        <Button
            android:id="@+id/buttonDress"
            android:backgroundTint="@color/light_grey"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/dress"
            android:textSize="11sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonSwitch"
        android:layout_marginBottom="32dp"
        android:paddingVertical="4dp"
        android:paddingHorizontal="8dp"
        android:background="@drawable/bg_rounded"
        android:gravity="center">
        <Button
            android:id="@+id/previous_photo"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:drawableLeft="@drawable/arrow_left"
            android:background="@android:color/transparent"/>
        <TextView
            android:id="@+id/current_photo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:layout_marginTop="3dp"
            />
        <Button
            android:id="@+id/next_photo"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:drawableRight="@drawable/arrow_right"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/freepik"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonSwitch"
        android:backgroundTint="@color/light_grey"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_to_camera"
        android:drawableLeft="@drawable/ic_baseline_cached_24_black"
        android:drawablePadding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="8dp"
        android:textSize="11sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>